# portable-etl

./: .env  .gitattributes  .gitignore  .terraform.lock.hcl  LICENSE  README.md  databricks.tf  docker-compose.yml  main.py  main.tf  smoke-test.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
common_lib/: pyproject.toml
common_lib/src/: stream_processor.py
docs/: architecture.drawio  cloud-architecture.drawio  edge-architecture.drawio
metadata/: rooms.csv
notebooks/: main_databricks.py  main_dlt.py
pyspark_app/: main.py  stream_processor.py
src/: .env  .terraform.lock.hcl  databricks.tf  docker-compose.yml  main.tf  requirements.txt  smoke-test.sh
src/common_lib/src/: data_processor.py  stream_processor.py
src/common_lib/tests/: __init__.py  test_data_processor.py  test_stream_processor.py
src/db/: create_db.sql  create_table.sql  init-db.sh
src/grafana/: datasources.yml
src/grafana/dashboards/: spark_performance.json
src/notebooks/: main_databricks.py  output_to_sql_db.py
src/prometheus/: prometheus.yml
src/pyspark_app/: main.py
